--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,40 @@
+# SublimeText project files
+/*.sublime-project
+*.sublime-workspace
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.elc
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# OSX
+.DS_Store
+
+# Windows
+using.exe
+
+# Windows image file caches
+Thumbs.db 
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# cpp
 *.o
 *.so
 a.out
-using
-main
-thread.sublime-project
-thread.sublime-workspace
-using.exe
 bin
-configure
+
+using*
